# LumenAgent

./: .gitignore  .npmignore  LUMEN_AGENT_DEVELOPMENT_GUIDE.md  README.md  VM_MODULE_DESIGN.md  _commit_msg.txt  install.js  package.json  pyproject.toml  start.js  会话摘要开发指南.md  多模型兼容开发方案.md  工具调用开发方案.md  方案-HTTP连接池重构.md
easy_understand/: chat-cli.md  database.md  session.md  skill.md  tool.md
lumen_agent/: __init__.py  app.py  config.py  requirements.txt
lumen_agent/agent/: __init__.py  agent.py  context.py
lumen_agent/api/: __init__.py  app_factory.py  dependency.py  websocket_auth.py
lumen_agent/application/: __init__.py  chat_in_cli.py  chat_service.py  context_assembly.py  llm_error_policy.py  rag_service.py  summary_service.py
lumen_agent/domain/: __init__.py  messages.py  ports.py
lumen_agent/infrastructure/: __init__.py  approval_registry.py  chat_run_manager.py  deepseek_client.py  embedding_client.py  http_pool.py  sqlite_conversation.py  sqlite_knowledge.py  sse_registry.py  sub_agent_event_bus.py  vm_event_bus.py  websocket_manager.py
lumen_agent/model_adapters/: __init__.py  agnes.py  base.py  deepseek.py  ollama.py  open_router.py  openai.py
lumen_agent/prompts/: builder.py  summary.md
lumen_agent/sub_agents/: __init__.py  base.py  claude_code.py  codex.py  cursor_agent.py  registry.py
scripts/: backfill_mcp_descriptions.py
tests/: test_config_security.py  test_openai_responses.py
webChannel/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
webChannel/src/: App.vue  main.ts  (+3 more)
work_space/: RULE.md  USER.md
(+187 files in other folders)
