[project]
name = "lumenagent"
version = "0.1.0"
requires-python = ">=3.10,<3.13"
dependencies = [
    "aiosqlite>=0.22.1",
    "apscheduler>=3.10.0",
    "beautifulsoup4>=4.12.0",
    "chromadb>=1.5.9",
    "ddgs>=0.5.0",
    "fastapi>=0.136.1",
    "flask>=3.0.0",
    "html2text>=2024.2.26",
    "httpx>=0.28.1",
    "mcp>=1.0.0",
    "paramiko>=3.4.0",
    "pydantic-settings>=2.14.1",
    "pyyaml>=6.0.3",
    "questionary>=2.1.1",
    "tiktoken>=0.7.0",
    "uvicorn>=0.47.0",
    "python-multipart>=0.0.9",
]

[project.scripts]
lumen-cli = "lumen_agent.application.chat_in_cli:main"
